test/tests/compiler/8_loops/invalid_parse/extra_credit/switch_goto_case.plx
pub fn main(none) i32 {
    jump 3
    match 3 {
        -> 3 { return 0 }
    }
}
